# detectionpython2

./: build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/seconddetectionpython/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/python/: main.py
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/seconddetectionpython/: MainActivity.kt  MyApplication.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/seconddetectionpython/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
